compiler/tests/fail/warning/x86-64/compatible_types.jazz
fn f () -> reg u64 {
  stack u64[4] a;
  stack u64[5] b;
  b = a;
}
